k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud4future-node
  namespace: app
  labels:
    app: cloud4future-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud4future-node
  template:
    metadata:
      labels:
        app: cloud4future-node
    spec:
      serviceAccountName: cloud4future-node-sa

      # Good practice
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: cloud4future-node
          image: REPLACE_IMAGE
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
