k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-svc
  namespace: staging
spec:
  selector:
    app: my-node-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
